# CCD-Query-IO

./: .gitignore  CMakeLists.txt  README.md  RationalCCDIOOptions.cmake.sample
.github/workflows/: continuous.yml
cmake/recipes/: sample_queries.cmake
cmake/rio/: rio_filter_flags.cmake  rio_use_colors.cmake  rio_warnings.cmake
src/ccd_io/: CMakeLists.txt  logger.hpp  rational.hpp  read_ccd_queries.cpp
src/rio/: CMakeLists.txt  ccd_query.hpp  logger.cpp  logger.hpp  rational.hpp  read_rational_ccd_queries.cpp  read_rational_ccd_queries.hpp
tests/: CMakeLists.txt  test_rational.cpp  test_read_ccd_queries.cpp  test_read_rational_ccd_queries.cpp
